--- a/services/jackd.service
+++ b/services/jackd.service
@@ -7,7 +7,7 @@ Requires=sound.target
 Type=simple
 Environment=JACK_NO_AUDIO_RESERVATION=1
 ExecStartPre=/bin/sleep 5
-ExecStart=/usr/bin/jackd -d alsa -P hw:0,0
+ExecStart=/usr/bin/jackd -d alsa -P hw:0,0 -r 44100 -p 256 -n 3
 Restart=always
 
 User=top
