Refactor installation script to download Sonobus AppImage and update service to use headless mode

--- a/services/sonobus.service
+++ b/services/sonobus.service
@@ -4,7 +4,7 @@ After=jackd.service
 Requires=jackd.service
 
 [Service]
-ExecStart=/usr/bin/sonobus --no-gui --jack
+ExecStart=/usr/local/bin/sonobus --headless --jack
 Restart=always
 
 User=top
